syntax = "proto3";
package listen;

service Listen {
  rpc Listen (ListenRequest) returns (stream ListenResponse);
}

message ListenRequest {
  string peer_id = 1;
}

message ListenResponse {
  bytes payload = 1;
}